prometheus/templates/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: prometheus-grafana
  name: prometheus-grafana
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: grafana
