prometheus/templates/prometheus-node-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: prometheus-node-exporter
  lables:
    app: prometheus
    component: node-exporter
spec:
  clusterIP: None
  ports:
  - name: prom-node-exp
    port: 9100
  selector:
    app: prometheus
    component: node-exporter
  type: ClusterIP
