prometheus/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.roo.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
      - path: /grafana
        backend:
          serviceName: prometheus-grafana
          servicePort: 80
